--- a/package.json
+++ b/package.json
@@ -9,17 +9,53 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "autoprefixer": "10.4.14",
+    "@auth/prisma-adapter": "^1.0.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
+    "@mui/system": "^5.13.5",
+    "@mui/x-data-grid": "^6.7.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^4.15.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@total-typescript/ts-reset": "^0.4.2",
+    "@upstash/ratelimit": "^0.4.3",
+    "@upstash/redis": "^1.21.0",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "framer-motion": "^10.12.16",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.244.0",
+    "nanoid": "^4.0.2",
     "next": "13.4.5",
-    "postcss": "8.4.24",
+    "next-auth": "^4.22.1",
+    "next-themes": "^0.2.1",
+    "openai": "^3.3.0",
+    "prism-react-renderer": "^1.3.5",
+    "prisma": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
+    "sharp": "^0.32.1",
+    "simplebar-react": "^3.2.4",
+    "tailwind-merge": "^1.13.1",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "^5.1.3"
   }
 }
